# dental-chatbot

./: README.md  alembic.ini  main.py  patients.db  pyproject.toml
alembic/: env.py
alembic/versions/: 3d76e3776eb0_create_booking_table.py  78db51f3addc_create_conversation_table.py  81fd9ea8222a_create_patients_table.py  df719a3dd6ff_create_messages_table.py
app/: config.py  websocket_app.py
app/appointments/: fixtures.py  interface.py  models.py
app/conversations/: __init__.py  appointment_agent.py  fixtures.py  interface.py  models.py  websocket_events.py
app/db/: base_model.py  database.py  utils.py
app/patient_info/: fixtures.py  interface.py  models.py
app/static/: chat.html  chat.js
